Fix home page search button text alignment

--- a/assets/src/scss/base.scss
+++ b/assets/src/scss/base.scss
@@ -171,6 +171,7 @@ textarea {
   padding: 10px 20px;
   gap: 8px;
   border-radius: 2px;
+  line-height: 1.0;
 
   &:hover {
     background: rd.$color-button-primary-hover;
