--- a/assets/src/scss/ckan/home.scss
+++ b/assets/src/scss/ckan/home.scss
@@ -57,7 +57,6 @@
 
       input[type=submit] {
         height: 40px;
-        width: 65px;
       }
     }
     a {
